--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <link href="/css/font-awesome.min.css" rel="stylesheet">
 
         <!-- Custom styles for this template -->
+        <link href="https://fonts.googleapis.com/css?family=Rubik|Archivo+Black" rel="stylesheet">
         <link href="/css/main.css" rel="stylesheet">
 
         <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -54,9 +55,9 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a href="/">
-                        <h2>
-                            <i class="fa fa-fw fa-handshake-o"></i>Chicago Data Collaborative
-                        </h2>
+                        <h3 class="brand">
+                            <i class="fa fa-fw fa-handshake-o"></i> Chicago Data Collaborative
+                        </h3>
                     </a>
                 </div>
                 <div class="collapse navbar-collapse" id="collapse">
@@ -83,7 +84,7 @@
                 <div class="col-sm-10 col-sm-offset-1">
 
                     <div class="section" id="who-we-are">
-                        <h2><i class="fa fa-fw fa-info-circle"></i>Who we are</h2>
+                        <h2><i class="fa fa-fw fa-info-circle"></i> Who we are</h2>
                         <p>
                             The Chicago Data Collaborative is a cooperative effort by newsrooms, academics, and nonprofit researchers to help each other understand our criminal justice system.
                         </p>
@@ -99,7 +100,7 @@
                     </div>
 
                     <div class="section" id="our-data">
-                        <h2><i class="fa fa-fw fa-table"></i>Our data</h2>
+                        <h2><i class="fa fa-fw fa-table"></i> Our data</h2>
                         <p>
                             Collaborative members currently have collected databases including:
                         </p>
@@ -135,7 +136,7 @@
                     </div>
 
                     <div class="section" id="how-to-join">
-                        <h2><i class="fa fa-fw fa-users"></i>How to join</h2>
+                        <h2><i class="fa fa-fw fa-users"></i> How to join</h2>
                         <p>
                             Interested in working with our data, or contributing data of your own? The Chicago Data Collaborative welcomes your partnership.
                         </p>
@@ -177,14 +178,14 @@
                     </div>
 
                     <div class="section" id="funding">
-                        <h2 id="funding"><i class="fa fa-fw fa-usd"></i>Funding</h2>
+                        <h2 id="funding"><i class="fa fa-fw fa-usd"></i> Funding</h2>
                         <p>
                         The Chicago Data Collaborative is generously funded by a one-year grant from the Robert R. McCormick Foundation. <a href="http://injusticewatch.org">Injustice Watch</a> currently provides fiscal sponsorship for the Collaborative.
                         </p>
                     </div>
 
                     <div class="section" id="get-in-touch">
-                        <h2 id="get-in-touch"><i class="fa fa-fw fa-envelope"></i>Get in touch</h2>
+                        <h2 id="get-in-touch"><i class="fa fa-fw fa-envelope"></i> Get in touch</h2>
                         <p>
                             The Chicago Data Collaborative is still growing, and we welcome your questions and feedback.
                         </p>
