Add logos and differentiate site sections

--- a/index.html
+++ b/index.html
@@ -79,28 +79,68 @@
             </div>
         </div>
 
-        <div class="content container">
+        <div class="content container-fluid">
             <div class="row">
                 <div class="col-sm-10 col-sm-offset-1">
 
                     <div class="section" id="who-we-are">
                         <h2><i class="fa fa-fw fa-info-circle"></i> Who we are</h2>
+                        <hr />
                         <p>
                             The Chicago Data Collaborative is a cooperative effort by newsrooms, academics, and nonprofit researchers to help each other understand our criminal justice system.
                         </p>
                         <p>
                             Together, we work to get data from public agencies, organize and document that data, and link the data together.
                         </p>
-                        <p>
-                            [Linked logos for: Injustice Watch, DataMade, Invisible Institute, Adler University, Lucy Parsons Labs, the Smart Chicago Collaborative, Chicago Appleseed Fund for Justice, and McCormick Foundation]
-                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <p class="partner-logos text-center">
+                    <a href="http://injusticewatch.org">
+                        <img alt="Injustice Watch" src="/images/logos/injustice-watch.png" />
+                    </a>
+                    <a href="https://datamade.us">
+                        <img alt="DataMade" src="/images/logos/datamade.png" />
+                    </a>
+                    <a href="https://lucyparsonslabs.com/">
+                        <img alt="Lucy Parsons Labs" src="/images/logos/lucy-parsons-labs.png" />
+                    </a>
+                    <a href="https://invisible.institute/">
+                        <img alt="Invisible Institute" src="/images/logos/invisible-institute.png" />
+                    </a>
+                    <a href="http://adler.edu/">
+                        <img alt="Adler University" src="/images/logos/adler.png" />
+                    </a>
+                    <a href="http://www.smartchicagocollaborative.org/">
+                        <img alt="Smart Chicago Collaborative" src="/images/logos/smart-chicago.jpg" />
+                    </a>
+                    <a href="http://www.chicagoappleseed.org/">
+                        <img alt="Chicago Appleseed Fund For Justice" src="/images/logos/appleseed-fund.png" />
+                    </a>
+                    <a href="https://www.mccormickfoundation.org/">
+                        <img alt="Robert R. McCormick Foundation" src="/images/logos/mccormick-foundation.png" />
+                    </a>
+                </p>
+            </div>
+            <div class="row">
+                <div class="col-sm-10 col-sm-offset-1">
+
+                    <div class="section">
                         <p>
                             Want to see your organization on this list? <a href="#how-to-join">Learn more about how to join</a>.
                         </p>
                     </div>
-
+                </div>
+            </div>
+            <div class="row divider">
+                <hr />
+            </div>
+            <div class="row">
+                <div class="col-sm-10 col-sm-offset-1">
                     <div class="section" id="our-data">
                         <h2><i class="fa fa-fw fa-table"></i> Our data</h2>
+                        <hr />
                         <p>
                             Collaborative members currently have collected databases including:
                         </p>
@@ -134,9 +174,16 @@
                             </li>
                         </ul>
                     </div>
-
+                </div>
+            </div>
+            <div class="row divider">
+                <hr />
+            </div>
+            <div class="row">
+                <div class="col-sm-10 col-sm-offset-1">
                     <div class="section" id="how-to-join">
                         <h2><i class="fa fa-fw fa-users"></i> How to join</h2>
+                        <hr />
                         <p>
                             Interested in working with our data, or contributing data of your own? The Chicago Data Collaborative welcomes your partnership.
                         </p>
@@ -176,9 +223,18 @@
                             All members and partners of the Chicago Data Collaborative must be approved by consensus of Collaborative membership. To join, reach out to us.
                         </p>
                     </div>
+                </div>
+            </div>
+            <div class="row divider">
+                <hr />
+            </div>
+            <div class="row">
+                <div class="col-sm-10 col-sm-offset-1">
+                    <div class="section" id="how-to-join">
 
                     <div class="section" id="funding">
                         <h2 id="funding"><i class="fa fa-fw fa-usd"></i> Funding</h2>
+                        <hr />
                         <p>
                         The Chicago Data Collaborative is generously funded by a one-year grant from the Robert R. McCormick Foundation. <a href="http://injusticewatch.org">Injustice Watch</a> currently provides fiscal sponsorship for the Collaborative.
                         </p>
