Polish lists and spacing

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="jumbotron">
             <div class="container text-center">
                 <h2>Work smarter. Advocate better.</h2>
-                <h2><strong>Collaborate</strong>.</h2>
+                <h2><strong><i class="fa fa-fw fa-handshake-o"></i> Collaborate</strong>.</h2>
             </div>
         </div>
 
@@ -145,34 +145,70 @@
                             Collaborative members currently have collected databases including:
                         </p>
 
-                        <ul>
-                            <li>
-                                Chicago Police Department investigatory stops from 2014, 2015, and 2016
-                            </li>
-                            <li>
-                                Arrests in Chicago from 2014 to present
-                            </li>
-                            <li>
-                                Snapshots of the Cook County Jail population from 2014 to 2016
-                            </li>
-                            <li>
-                                Lookup tables to link all of these sources together
-                            </li>
-                        </ul>
+                        <div class="row">
+                            <div class="col-xs-10 col-sm-8">
+                                <table class="table text-left table-indent">
+                                    <tbody>
+                                        <tr>
+                                            <th class="col-xs-1"><i class="fa fa-fw fa-search"></i></th>
+                                            <td>
+                                                Chicago Police Department <strong>investigatory stops</strong> from 2014 to 2016
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <th class="col-xs-1"><i class="fa fa-fw fa-taxi"></i></th>
+                                            <td>
+                                                <strong>Arrests</strong> in Chicago from 2014 to present
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <th class="col-xs-1"><i class="fa fa-fw fa-users"></i></th>
+                                            <td>
+                                                Snapshots of the <strong>Cook County Jail population</strong> from 2014 to 2016
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <th class="col-xs-1"><i class="fa fa-fw fa-link"></i></th>
+                                            <td>
+                                                Lookup tables to <strong>link</strong> all of these sources together
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+
                         <p>
                             We are also actively pursuing the following data:
                         </p>
-                        <ul>
-                            <li>
-                                Daily snapshots of the Cook County Jail population
-                            </li>
-                            <li>
-                                State’s Attorney case-level data
-                            </li>
-                            <li>
-                                Merged Criminal History (State Police) and IDOC sentencing/release data
-                            </li>
-                        </ul>
+
+                        <div class="row">
+                            <div class="col-xs-10 col-sm-6">
+                                <table class="table text-left table-indent">
+                                    <tbody>
+                                        <tr>
+                                            <th class="col-xs-1">
+                                                <i class="fa fa-fw fa-clock-o"></i></th>
+                                            <td>
+                                                <strong>Daily snapshots</strong> of the Cook County Jail population
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <th class="col-xs-1"><i class="fa fa-fw fa-university"></i></th>
+                                            <td>
+                                                State’s Attorney <strong>case-level data</strong>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <th class="col-xs-1"><i class="fa fa-fw fa-share-alt"></i></th>
+                                            <td>
+                                                Merged Criminal History (State Police) and IDOC <strong>sentencing/release data</strong>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -204,23 +240,34 @@
                             Members are typically civil society organizations, while partners can be either individuals or institutions. Some examples of potential partners include:
                         </p>
 
-                        <ul>
-                            <li>
-                                Journalists
-                            </li>
-                            <li>
-                                Academics
-                            </li>
-                            <li>
-                                Independent researchers
-                            </li>
-                            <li>
-                                Advocacy organizations
-                            </li>
-                        </ul>
+                        <div class="row">
+                            <div class="col-xs-10 col-sm-6">
+                                <table class="table text-left table-indent">
+                                    <tbody>
+                                        <tr>
+                                            <th class="col-xs-1"><i class="fa fa-fw fa-pencil"></i></th>
+                                            <td>Journalists</td>
+
+                                        </tr>
+                                        <tr>
+                                            <th><i class="fa fa-fw fa-graduation-cap"></i></th>
+                                            <td>Academics</td>
+                                        </tr>
+                                        <tr>
+                                            <th><i class="fa fa-fw fa-search"></i></th>
+                                            <td>Independent researchers</td>
+                                        </tr>
+                                        <tr>
+                                            <th><i class="fa fa-fw fa-bullhorn"></i></th>
+                                            <td>Advocacy organizations</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
 
                         <p>
-                            All members and partners of the Chicago Data Collaborative must be approved by consensus of Collaborative membership. To join, reach out to us.
+                        All members and partners of the Chicago Data Collaborative must be approved by consensus of Collaborative membership. To join, <a href="#get-in-touch">reach out to us</a>.
                         </p>
                     </div>
                 </div>
@@ -230,8 +277,6 @@
             </div>
             <div class="row">
                 <div class="col-sm-10 col-sm-offset-1">
-                    <div class="section" id="how-to-join">
-
                     <div class="section" id="funding">
                         <h2 id="funding"><i class="fa fa-fw fa-usd"></i> Funding</h2>
                         <hr />
@@ -239,20 +284,21 @@
                         The Chicago Data Collaborative is generously funded by a one-year grant from the Robert R. McCormick Foundation. <a href="http://injusticewatch.org">Injustice Watch</a> currently provides fiscal sponsorship for the Collaborative.
                         </p>
                     </div>
-
+                </div>
+            </div>
+            <div class="row divider">
+                <hr />
+            </div>
+            <div class="row">
+                <div class="col-sm-10 col-sm-offset-1">
                     <div class="section" id="get-in-touch">
                         <h2 id="get-in-touch"><i class="fa fa-fw fa-envelope"></i> Get in touch</h2>
                         <p>
                             The Chicago Data Collaborative is still growing, and we welcome your questions and feedback.
                         </p>
                         <p>
-                            [Contact information or form]
-                        </p>
-                        <p>
-                            If your organization is interested in joining the Collaborative, [separate contact link].
-                        </p>
-                        <p>
-                            [Social media/newsletter links, if applicable]
+                            <i class="fa fa-fw fa-share"></i>
+                            info {at} datamade {dot} us
                         </p>
                     </div>
 
