--- a/index.html
+++ b/index.html
@@ -72,10 +72,12 @@
             </div>
         </nav>
 
-        <div class="jumbotron">
-            <div class="container text-center">
-                <h2>Work smarter. Advocate better.</h2>
-                <h2><strong><i class="fa fa-fw fa-handshake-o"></i> Collaborate</strong>.</h2>
+        <div class="container-fluid splash-photo">
+            <div class="row-fluid text-center" style="margin-top:110px">
+                <div class="col-sm-6 col-sm-offset-3">
+                    <h2 style="color:white;background:#333;padding:10px">Work smarter. Advocate better.</h2>
+                    <h2 class="splash-motto" style="background:#333;padding:10px"><strong><i class="fa fa-fw fa-handshake-o"></i> Collaborate</strong>.</h2>
+                </div>
             </div>
         </div>
 
@@ -133,10 +135,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row divider">
-                <hr />
-            </div>
-            <div class="row">
+            <div class="row accent">
                 <div class="col-sm-10 col-sm-offset-1">
                     <div class="section" id="our-data">
                         <h2><i class="fa fa-fw fa-table"></i> Our data</h2>
@@ -212,9 +211,6 @@
                     </div>
                 </div>
             </div>
-            <div class="row divider">
-                <hr />
-            </div>
             <div class="row">
                 <div class="col-sm-10 col-sm-offset-1">
                     <div class="section" id="how-to-join">
@@ -272,10 +268,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row divider">
-                <hr />
-            </div>
-            <div class="row">
+            <div class="row accent">
                 <div class="col-sm-10 col-sm-offset-1">
                     <div class="section" id="funding">
                         <h2 id="funding"><i class="fa fa-fw fa-usd"></i> Funding</h2>
@@ -286,9 +279,6 @@
                     </div>
                 </div>
             </div>
-            <div class="row divider">
-                <hr />
-            </div>
             <div class="row">
                 <div class="col-sm-10 col-sm-offset-1">
                     <div class="section" id="get-in-touch">
@@ -298,7 +288,9 @@
                         </p>
                         <p>
                             <i class="fa fa-fw fa-share"></i>
-                            info {at} datamade {dot} us
+                            <span class="underlined">
+                                info {at} datamade {dot} us
+                            </span>
                         </p>
                     </div>
 
