--- a/index.html
+++ b/index.html
@@ -307,6 +307,8 @@
     </body>
 
     <!-- Place JS after content for faster loading -->
-    <script src="/js/jquery-1.10.1.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/js/jquery-1.10.1.min.js"></script>
+    <script type="text/javascript" src="/js/jquery.scrollTo.min.js"></script>
+    <script type="text/javascript" src="/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/js/scroller.js"></script>
 </html>
