Change up content based on feedback

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                     <a href="/">
                         <h3 class="brand">
                             <i class="fa fa-fw fa-handshake-o"></i> Chicago Data Collaborative
+                            <br/><small class="subtitle-brand">Criminal Justice Pilot Project</small>
                         </h3>
                     </a>
                 </div>
@@ -75,8 +76,11 @@
         <div class="container-fluid splash-photo">
             <div class="row-fluid text-center" style="margin-top:110px">
                 <div class="col-sm-6 col-sm-offset-3">
-                    <h2 style="color:white;background:#333;padding:10px">Work smarter. Advocate better.</h2>
-                    <h2 class="splash-motto" style="background:#333;padding:10px"><strong><i class="fa fa-fw fa-handshake-o"></i> Collaborate</strong>.</h2>
+                    <h2 class="motto">
+                        We <span class="splash-motto">share capacity</span>
+                        to assemble data and paint a full picture of <span class="splash-motto">
+                        the criminal justice system</span> in Chicago and Cook County.
+                    </h2>
                 </div>
             </div>
         </div>
@@ -89,10 +93,13 @@
                         <h2><i class="fa fa-fw fa-info-circle"></i> Who we are</h2>
                         <hr />
                         <p>
-                            The Chicago Data Collaborative is a cooperative effort by newsrooms, academics, and nonprofit researchers to help each other understand our criminal justice system.
+                            The Chicago Data Collaborative is a cooperative effort by <strong>newsrooms, academics, and nonprofit researchers</strong> to help each other understand our criminal justice system.
                         </p>
                         <p>
-                            Together, we work to get data from public agencies, organize and document that data, and link the data together.
+                            Together, we work to <strong>get data</strong> from public agencies, <strong>organize</strong>and <strong>document</strong> that data, and <strong>link</strong> the data together.
+                        </p>
+                        <p>
+                            Criminal justice involves a complex network of different institutions. By sharing capacity and organizing data from multiple points of contact, including investigatory stops, arrests, court cases, and lockup, <strong>we seek to a comprehensive portrait of the system as a whole</strong>.
                         </p>
                     </div>
                 </div>
@@ -100,13 +107,13 @@
             <div class="row">
                 <p class="partner-logos text-center">
                     <a href="http://injusticewatch.org">
-                        <img alt="Injustice Watch" src="/images/logos/injustice-watch.png" />
+                        <img alt="Injustice Watch" class="big-logo" src="/images/logos/injustice-watch.png" />
                     </a>
                     <a href="https://datamade.us">
-                        <img alt="DataMade" src="/images/logos/datamade.png" />
+                        <img alt="DataMade" class="big-logo" src="/images/logos/datamade.png" />
                     </a>
                     <a href="https://lucyparsonslabs.com/">
-                        <img alt="Lucy Parsons Labs" src="/images/logos/lucy-parsons-labs.png" />
+                        <img alt="Lucy Parsons Labs" class="small-logo" src="/images/logos/lucy-parsons-labs.png" />
                     </a>
                     <a href="https://invisible.institute/">
                         <img alt="Invisible Institute" src="/images/logos/invisible-institute.png" />
@@ -141,7 +148,10 @@
                         <h2><i class="fa fa-fw fa-table"></i> Our data</h2>
                         <hr />
                         <p>
-                            Collaborative members currently have collected databases including:
+                        Collaborative members collect data from institutions at all points of contact in the Cook County criminal justice system, including the <strong>Chicago Police Department</strong>, the <strong>the Illinois State Police</strong>, the <strong>Office of the State's Attorney</strong>, and the <strong>Cook County Jail</strong>.
+                        </p>
+                        <p>
+                            So far, collaborative members have collected databases including:
                         </p>
 
                         <div class="row">
@@ -164,6 +174,12 @@
                                             <th class="col-xs-1"><i class="fa fa-fw fa-users"></i></th>
                                             <td>
                                                 Snapshots of the <strong>Cook County Jail population</strong> from 2014 to 2016
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <th class="col-xs-1"><i class="fa fa-fw fa-university"></i></th>
+                                            <td>
+                                                State’s Attorney <strong>case-level data</strong>
                                             </td>
                                         </tr>
                                         <tr>
@@ -190,12 +206,6 @@
                                                 <i class="fa fa-fw fa-clock-o"></i></th>
                                             <td>
                                                 <strong>Daily snapshots</strong> of the Cook County Jail population
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <th class="col-xs-1"><i class="fa fa-fw fa-university"></i></th>
-                                            <td>
-                                                State’s Attorney <strong>case-level data</strong>
                                             </td>
                                         </tr>
                                         <tr>
@@ -274,7 +284,7 @@
                         <h2 id="funding"><i class="fa fa-fw fa-usd"></i> Funding</h2>
                         <hr />
                         <p>
-                        The Chicago Data Collaborative is generously funded by a one-year grant from the Robert R. McCormick Foundation. <a href="http://injusticewatch.org">Injustice Watch</a> currently provides fiscal sponsorship for the Collaborative.
+                        The Chicago Data Collaborative is generously funded by a one-year grant from the <a href="https://www.mccormickfoundation.org/">Robert R. McCormick Foundation</a>. Fiscal sponsorship for the collaborative is currently provided by <a href="http://injusticewatch.org">Injustice Watch</a>.
                         </p>
                     </div>
                 </div>
