Add new contact address

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                             The Chicago Data Collaborative is a cooperative effort by <strong>newsrooms, academics, and nonprofit researchers</strong> to help each other understand our criminal justice system.
                         </p>
                         <p>
-                            Together, we work to <strong>get data</strong> from public agencies, <strong>organize</strong>and <strong>document</strong> that data, and <strong>link</strong> the data together.
+                            Together, we work to <strong>get data</strong> from public agencies, <strong>organize</strong> and <strong>document</strong> that data, and <strong>link</strong> the data together.
                         </p>
                         <p>
                             Criminal justice involves a complex network of different institutions. By sharing capacity and organizing data from multiple points of contact, including investigatory stops, arrests, court cases, and lockup, <strong>we seek to a comprehensive portrait of the system as a whole</strong>.
@@ -299,7 +299,7 @@
                         <p>
                             <i class="fa fa-fw fa-share"></i>
                             <span class="underlined">
-                                info {at} datamade {dot} us
+                                info {at} chicagodatacollaborative {dot} org
                             </span>
                         </p>
                     </div>
