--- a/index.html
+++ b/index.html
@@ -85,11 +85,25 @@
             </div>
         </div>
 
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-xs-12">
+                    <p class="small pull-right">
+                        <em>
+                            Photo by <a href="https://www.flickr.com/photos/rachelc/3768466522/">Rachel Clarke</a>,
+                            licensed <a href="https://creativecommons.org/licenses/by-nc/2.0/">CC BY-NC 2.0</a>.
+                        </em>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <br />
+
         <div class="content container-fluid">
             <div class="row">
                 <div class="col-sm-10 col-sm-offset-1">
 
-                    <div class="section" id="who-we-are">
+                    <div class="section first" id="who-we-are">
                         <h2><i class="fa fa-fw fa-info-circle"></i> Who we are</h2>
                         <hr />
                         <p>
