--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         <h2><i class="fa fa-fw fa-table"></i> Our data</h2>
                         <hr />
                         <p>
-                        Collaborative members collect data from institutions at all points of contact in the Cook County criminal justice system, including the <strong>Chicago Police Department</strong>, the <strong>the Illinois State Police</strong>, the <strong>Office of the State's Attorney</strong>, and the <strong>Cook County Jail</strong>.
+                        Collaborative members collect data from institutions at all points of contact in the Cook County criminal justice system, including the <strong>Chicago Police Department</strong>, the <strong>Illinois State Police</strong>, the <strong>Office of the State's Attorney</strong>, and the <strong>Cook County Jail</strong>.
                         </p>
                         <p>
                             So far, collaborative members have collected databases including:
