Swap out City Tech for Smart Chicago

--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
                     <a href="http://adler.edu/">
                         <img alt="Adler University" src="/images/logos/adler.png" />
                     </a>
-                    <a href="http://www.smartchicagocollaborative.org/">
-                        <img alt="Smart Chicago Collaborative" src="/images/logos/smart-chicago.jpg" />
+                    <a href="http://www.uilabs.org/innovation-platforms/cities-infrastructure/">
+                        <img alt="City Tech Collaborative" class="small-logo" src="/images/logos/city-tech.png" />
                     </a>
                     <a href="http://www.chicagoappleseed.org/">
                         <img alt="Chicago Appleseed Fund For Justice" src="/images/logos/appleseed-fund.png" />
