--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                             Together, we work to <strong>get data</strong> from public agencies, <strong>organize</strong> and <strong>document</strong> that data, and <strong>link</strong> the data together.
                         </p>
                         <p>
-                            Criminal justice involves a complex network of different institutions. By sharing capacity and organizing data from multiple points of contact, including investigatory stops, arrests, court cases, and lockup, <strong>we seek to a comprehensive portrait of the system as a whole</strong>.
+                            Criminal justice involves a complex network of different institutions. By sharing capacity and organizing data from multiple points of contact&mdash;including investigatory stops, arrests, court cases, and lockup&mdash;<strong>we seek to paint a comprehensive portrait of the system as a whole</strong>.
                         </p>
                     </div>
                 </div>
