Update link to Adler

--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
                     <a href="https://invisible.institute/">
                         <img alt="Invisible Institute" src="/images/logos/invisible-institute.png" />
                     </a>
-                    <a href="http://adler.edu/">
-                        <img alt="Adler University" src="/images/logos/adler.png" />
+                    <a href="http://socialchange.adler.edu/center-for-equitable-cities/">
+                        <img alt="Adler University Center for Equitable Cities" src="/images/logos/adler.png" />
                     </a>
                     <a href="http://www.uilabs.org/innovation-platforms/cities-infrastructure/">
                         <img alt="City Tech Collaborative" class="small-logo" src="/images/logos/city-tech.png" />
