Add analytics and favicons

--- a/index.html
+++ b/index.html
@@ -12,21 +12,23 @@
         <!-- Facebook metadata -->
         <meta content="Chicago Data Collaborative" property="og:site_name">
         <meta content="website" property="og:type">
-        <meta content="" property="og:image">
+        <meta content="https://chicagodatacollaborative.org/images/newsroom.jpg" property="og:image">
         <meta content="Chicago Data Collaborative" property="og:title">
         <meta content="The Chicago Data Collaborative is a cooperative effort by newsrooms, academics, and nonprofit researchers to help each other understand our criminal justice system." property="og:description">
-        <meta content="" property="og:url">
+        <meta content="https://chicagodatacollaborative.org/" property="og:url">
 
         <!-- Twitter metadata -->
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:site" content="@DataMadeCo">
         <meta name="twitter:creator" content="@DataMadeCo">
-        <meta name="twitter:image:src" content="">
+        <meta name="twitter:image:src" content="https://chicagodatacollaborative.org/images/newsroom.jpg">
         <meta name="twitter:title" content="Chicago Data Collaborative">
-        <meta name="twitter:url" content="">
+        <meta name="twitter:url" content="https://chicagodatacollaborative.org/">
         <meta name="twitter:description" content="The Chicago Data Collaborative is a cooperative effort by newsrooms, academics, and nonprofit researchers to help each other understand our criminal justice system.">
 
         <!-- Favicons -->
+        <link rel="icon" type="image/png" href="/images/favicons/favicon-32x32.png" sizes="32x32" />
+        <link rel="icon" type="image/png" href="/images/favicons/favicon-16x16.png" sizes="16x16" />
 
         <!-- Bootstrap core CSS -->
         <link href="/css/bootstrap.min.css" rel="stylesheet">
@@ -335,4 +337,5 @@
     <script type="text/javascript" src="/js/jquery.scrollTo.min.js"></script>
     <script type="text/javascript" src="/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/js/scroller.js"></script>
+    <script type="text/javascript" src="/js/analytics_lib.js"></script>
 </html>
