Add link to bond court observation data

--- a/index.html
+++ b/index.html
@@ -193,6 +193,16 @@
                                                 </a>
                                             </td>
                                         </tr>
+                                        <tr>
+                                            <th class="col-xs-1"><i class="fa fa-fw fa-search"></i></th>
+                                            <td>
+                                                <strong>Bond court observation</strong> data
+                                                <br/>
+                                                <a href="https://gitlab.com/ChicagoDataCooperative/court-observation#readme">
+                                                    Get the data&nbsp;<i class="fa fa-fw fa-arrow-right"></i>
+                                                </a>
+                                            </td>
+                                        </tr>
                                     </tbody>
                                 </table>
                             </div>
