we have contact cards and jail data now

--- a/index.html
+++ b/index.html
@@ -176,6 +176,16 @@
                                         <tr>
                                             <th class="col-xs-1"><i class="fa fa-fw fa-users"></i></th>
                                             <td>
+                                                Investigatory Stop data from the <strong>Chicago Police Department</strong>
+                                                <br/>
+                                                <a href="https://gitlab.com/ChicagoDataCooperative/contact-cards#readme">
+                                                    Get the data&nbsp;<i class="fa fa-fw fa-arrow-right"></i>
+                                                </a>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <th class="col-xs-1"><i class="fa fa-fw fa-users"></i></th>
+                                            <td>
                                                 Population snapshots from the <strong>Cook County Jail</strong>
                                                 <br/>
                                                 <a href="https://gitlab.com/ChicagoDataCooperative/sheriff-office#readme">
@@ -244,6 +254,12 @@
                                                 Lookup tables to <strong>link</strong> all of these sources together
                                             </td>
                                         </tr>
+                                        <tr>
+                                            <th class="col-xs-1"><i class="fa fa-fw fa-link"></i></th>
+                                            <td>
+                                                Individual level <strong>admissions and releases</strong> from the Cook County Jail
+                                            </td>
+                                        </tr>
                                     </tbody>
                                 </table>
                             </div>
@@ -257,14 +273,6 @@
                             <div class="col-xs-10 col-sm-6">
                                 <table class="table text-left table-indent">
                                     <tbody>
-                                        <tr>
-                                            <th class="col-xs-1">
-                                                <i class="fa fa-fw fa-clock-o"></i></th>
-                                            <td>
-                                                <strong>Daily snapshots</strong> of the Cook County Jail population
-                                            </td>
-                                        </tr>
-                                        <tr>
                                             <th class="col-xs-1"><i class="fa fa-fw fa-share-alt"></i></th>
                                             <td>
                                                 Merged Criminal History (State Police) and IDOC <strong>sentencing/release data</strong>
