Create section for Founding Members and update logos

--- a/index.html
+++ b/index.html
@@ -121,6 +121,11 @@
                 </div>
             </div>
             <div class="row">
+                <div class="col-sm-10 col-sm-offset-1 text-center">
+                    <h2>Partners</h2>
+                </div>
+            </div>
+            <div class="row">
                 <p class="partner-logos text-center">
                     <a href="http://injusticewatch.org">
                         <img alt="Injustice Watch" class="big-logo" src="/images/logos/injustice-watch.png" />
@@ -134,17 +139,36 @@
                     <a href="https://invisible.institute/">
                         <img alt="Invisible Institute" src="/images/logos/invisible-institute.png" />
                     </a>
+                    <a href="http://www.chicagoappleseed.org/">
+                        <img alt="Chicago Appleseed Fund For Justice" src="/images/logos/appleseed-fund.png" />
+                    </a>
+                    <a href="https://www.metroplanning.org/index.html">
+                        <img alt="Metropolitan Planning Council" src="/images/logos/metropolitan-planning-council.png" />
+                    </a>
+                    <a href="https://www.mccormickfoundation.org/">
+                        <img alt="Robert R. McCormick Foundation" src="/images/logos/mccormick-foundation.png" />
+                    </a>
+                    <a href="https://www.law.northwestern.edu/legalclinic/">
+                        <img alt="Bluhm Legal Clinic" src="/images/logos/bluhm.png" />
+                    </a>
+                    <a href="https://www.chicagoreporter.com/">
+                        <img alt="The Chicago Reporter" src="/images/logos/chicago-reporter.png" />
+                    </a>
+                </p>
+            </div>
+            <br />
+            <div class="row">
+                <div class="col-sm-10 col-sm-offset-1 text-center">
+                    <h2>Founding members</h2>
+                </div>
+            </div>
+            <div class="row">
+                <p class="partner-logos text-center">
                     <a href="http://socialchange.adler.edu/center-for-equitable-cities/">
                         <img alt="Adler University Center for Equitable Cities" src="/images/logos/adler.png" />
                     </a>
                     <a href="http://www.uilabs.org/innovation-platforms/cities-infrastructure/">
                         <img alt="City Tech Collaborative" class="small-logo" src="/images/logos/city-tech.png" />
-                    </a>
-                    <a href="http://www.chicagoappleseed.org/">
-                        <img alt="Chicago Appleseed Fund For Justice" src="/images/logos/appleseed-fund.png" />
-                    </a>
-                    <a href="https://www.mccormickfoundation.org/">
-                        <img alt="Robert R. McCormick Foundation" src="/images/logos/mccormick-foundation.png" />
                     </a>
                 </p>
             </div>
