--- a/index.html
+++ b/index.html
@@ -121,8 +121,9 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-10 col-sm-offset-1 text-center">
-                    <h2>Partners</h2>
+                <div class="col-sm-8 col-sm-offset-2 text-center">
+                    <h2>Members</h2>
+                    <hr/>
                 </div>
             </div>
             <div class="row">
@@ -145,21 +146,19 @@
                     <a href="https://www.metroplanning.org/index.html">
                         <img alt="Metropolitan Planning Council" src="/images/logos/metropolitan-planning-council.png" />
                     </a>
-                    <a href="https://www.mccormickfoundation.org/">
-                        <img alt="Robert R. McCormick Foundation" src="/images/logos/mccormick-foundation.png" />
-                    </a>
                     <a href="https://www.law.northwestern.edu/legalclinic/">
                         <img alt="Bluhm Legal Clinic" src="/images/logos/bluhm.png" />
                     </a>
                     <a href="https://www.chicagoreporter.com/">
-                        <img alt="The Chicago Reporter" src="/images/logos/chicago-reporter.png" />
+                        <img alt="The Chicago Reporter" src="/images/logos/chicago-reporter.png" id="chicago-reporter" />
                     </a>
                 </p>
             </div>
             <br />
             <div class="row">
-                <div class="col-sm-10 col-sm-offset-1 text-center">
+                <div class="col-sm-8 col-sm-offset-2 text-center">
                     <h2>Founding members</h2>
+                    <hr/>
                 </div>
             </div>
             <div class="row">
@@ -169,6 +168,19 @@
                     </a>
                     <a href="http://www.uilabs.org/innovation-platforms/cities-infrastructure/">
                         <img alt="City Tech Collaborative" class="small-logo" src="/images/logos/city-tech.png" />
+                    </a>
+                </p>
+            </div>
+            <div class="row">
+                <div class="col-sm-8 col-sm-offset-2 text-center">
+                    <h2>Supported by</h2>
+                    <hr/>
+                </div>
+            </div>
+            <div class="row">
+                <p class="partner-logos text-center">
+                    <a href="https://www.mccormickfoundation.org/">
+                        <img alt="Robert R. McCormick Foundation" src="/images/logos/mccormick-foundation.png" />
                     </a>
                 </p>
             </div>
